# NanoProlog

./: .gitignore  LICENSE  Makefile  NanoProlog.cabal  README  royals.pro  tc.pro
src/: Main.hs
src/Language/Prolog/: NanoProlog.hs  royals.pro
src/Language/Prolog/NanoProlog/: .#NanoProlog.hs  Interpreter.hs  Lib.hs  Main.hs  NanoProlog.hs  Parser.hs  ParserUUTC.hs  Search.hs
